k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: emis-ns
  labels:
    name: emis-ns
